--- a/aboutme.html
+++ b/aboutme.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
   <meta charset="UTF-8">
@@ -14,6 +14,7 @@
       <a class="cabecalho__navbar__link" href="index.html">Home</a>
       <a class="cabecalho__navbar__link" href="aboutme.html">Sobre Mim</a>
       <a class="cabecalho__navbar__link" href="form.html">Fale Comigo</a>
+      <a class="cabecalho__navbar__link" href="Ecomerce.html">E-commerce</a>
     </nav>
   </header>
 
