--- a/form.html
+++ b/form.html
@@ -1,3 +1,6 @@
+<!DOCTYPE html>
+<html lang="pt-br">
+  
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -14,6 +17,7 @@
           <a class="cabecalho__navbar__link" href="index.html">Home</a>
           <a class="cabecalho__navbar__link" href="aboutme.html">Sobre Mim</a>
         <a class="cabecalho__navbar__link" href="form.html">Fale Comigo</a>
+        <a class="cabecalho__navbar__link" href="Ecomerce.html">E-commerce</a>
       </nav>
   </header>
 
