--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <a class="cabecalho__navbar__link" href="index.html">Home</a>
             <a class="cabecalho__navbar__link" href="aboutme.html">Sobre Mim</a>
           <a class="cabecalho__navbar__link" href="form.html">Fale Comigo</a>
+          <a class="cabecalho__navbar__link" href="Ecomerce.html">E-commerce</a>  
         </nav>
     </header>
     <main class="apresentacao">
