--- a/Ecomerce.html
+++ b/Ecomerce.html
@@ -74,7 +74,7 @@
         <button>Adicionar ao Carrinho</button>
     </div>
     <div class="produtos">
-        <img src="/imgs/silvamrioliom.jpg" alt="O Silmarillion">
+        <img src="/imgs/silvamrioliom.jpg" alt="O Silmarillion" height="300" width="300">
         <h2 class="nomeProdutos">Livro O Silmarillion</h2>
         <p class="precoProdutps">R$ 48,58</p>
         <button>Adicionar ao Carrinho</button>
