--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class="apresentacao__botoes">
                 <h2 class="apresentacao__botoes__subtitulo">Acesse minhas Redes:</h2>
                 <a class="apresentacao__botao_link" href="https://linkedin.com/in/brendo-garcia-da-silva-a642091a2"> <img class="icongit" src="/imgs/linkedin.png" alt="icon-linkdin">Linkedin</a>
-                <a class="apresentacao__botao_link" href="https://github.com/BrendoGarcia"> <img class="icongit" src="/imgs/github (1).png" alt="icon-github">GitHub</a>
+                <a class="apresentacao__botao_link" href="https://github.com/BrendoGarcia"> <img class="icongit" src="/imgs/github.png" alt="icon-github">GitHub</a>
             </div>
         </section>
         <img class="minhafoto" src="imgs/images.jpg" alt="minhafoto">
