--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
           Adora Java e outras linguguem back-end, conheço um pouco de banco de dados e seus modelos pricipalmente o Mysql. Sempre tento aprende coisa novas a todo momento como blockchain e suas tecnologias.</p>
             <div class="apresentacao__botoes">
                 <h2 class="apresentacao__botoes__subtitulo">Acesse minhas Redes:</h2>
-                <a class="apresentacao__botao_link" href="https://linkedin.com/in/brendo-garcia-da-silva-a642091a2"> <img class="icongit" src="/imgs/linkedin.png" alt="icon-linkdin">Linkedin</a>
-                <a class="apresentacao__botao_link" href="https://github.com/BrendoGarcia"> <img class="icongit" src="/imgs/github.png" alt="icon-github">GitHub</a>
+                <a class="apresentacao__botao_link" href="https://linkedin.com/in/brendo-garcia-da-silva-a642091a2"> <img class="icongit" src="imgs/linkedin.png" alt="icon-linkdin">Linkedin</a>
+                <a class="apresentacao__botao_link" href="https://github.com/BrendoGarcia"> <img class="icongit" src="imgs/github.png" alt="icon-github">GitHub</a>
             </div>
         </section>
         <img class="minhafoto" src="imgs/images.jpg" alt="minhafoto">
