--- a/Ecomerce.html
+++ b/Ecomerce.html
@@ -26,55 +26,55 @@
 
 <div class="credprodutos">
     <div class="produtos">
-        <img src="/imgs/xbox.png" alt="xbox" height="300" width="300"> 
+        <img src="imgs/xbox.png" alt="xbox" height="300" width="300"> 
         <h2 class="nomeProdutos">Console Xbox Series X</h2>
         <p class="precoProdutps">R$ 3.799,00</p>
         <button>Adicionar ao Carrinho</button>
     </div>
     <div class="produtos">
-        <img src="/imgs/atari.png" alt="atari" height="300" width="300">
+        <img src="imgs/atari.png" alt="atari" height="300" width="300">
         <h2 class="nomeProdutos">Atari Flashback Preto</h2>
         <p class="precoProdutps">R$ 529,90</p>
         <button>Adicionar ao Carrinho</button>
     </div>
     <div class="produtos">
-        <img src="/imgs/bebida.png" alt="Whisky Jack" height="300" width="300">
+        <img src="imgs/bebida.png" alt="Whisky Jack" height="300" width="300">
         <h2 class="nomeProdutos">Whisky Jack Single Barrel </h2>
         <p class="precoProdutps">R$ 270,00</p>
         <button>Adicionar ao Carrinho</button>
     </div>
     <div class="produtos">
-        <img src="/imgs/fone.png" alt="JBL, Fone de Ouvido" height="300" width="300">
+        <img src="imgs/fone.png" alt="JBL, Fone de Ouvido" height="300" width="300">
         <h2 class="nomeProdutos">Fone de Ouvido JBL</h2>
         <p class="precoProdutps">R$ 230,00</p>
         <button>Adicionar ao Carrinho</button>
     </div>
     <div class="produtos">
-        <img src="/imgs/pc.png" alt="Pc Gamer Computador" height="300" width="300">
+        <img src="imgs/pc.png" alt="Pc Gamer Computador" height="300" width="300">
         <h2 class="nomeProdutos">Pc Gamer Computador</h2>
         <p class="precoProdutps">R$ 3.599,90</p>
         <button>Adicionar ao Carrinho</button>
     </div>
     <div class="produtos">
-        <img src="/imgs/torre.png" alt="Torre Equilíbrio Clássica" height="300" width="300">
+        <img src="imgs/torre.png" alt="Torre Equilíbrio Clássica" height="300" width="300">
         <h2 class="nomeProdutos">Torre Equilíbrio Clássica</h2>
         <p class="precoProdutps">R$ 30,90</p>
         <button>Adicionar ao Carrinho</button>
     </div>
     <div class="produtos">
-        <img src="/imgs/ps5.png" alt="PlayStation®5 Slim Edição Digital" height="300" width="300">
+        <img src="imgs/ps5.png" alt="PlayStation®5 Slim Edição Digital" height="300" width="300">
         <h2 class="nomeProdutos">PlayStation®5 Slim Edição Digital</h2>
         <p class="precoProdutps">R$ 3.781,00</p>
         <button>Adicionar ao Carrinho</button>
     </div>
     <div class="produtos">
-        <img src="/imgs/mobi.png" alt="Banco Imobiliário Realidade Aumentada" height="300" width="300">
+        <img src="imgs/mobi.png" alt="Banco Imobiliário Realidade Aumentada" height="300" width="300">
         <h2 class="nomeProdutos">Banco Imobiliário Realidade Aumentada</h2>
         <p class="precoProdutps">R$ 100,08</p>
         <button>Adicionar ao Carrinho</button>
     </div>
     <div class="produtos">
-        <img src="/imgs/silvamrioliom.jpg" alt="O Silmarillion" height="300" width="300">
+        <img src="imgs/silvamrioliom.jpg" alt="O Silmarillion" height="300" width="300">
         <h2 class="nomeProdutos">Livro O Silmarillion</h2>
         <p class="precoProdutps">R$ 48,58</p>
         <button>Adicionar ao Carrinho</button>
