--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" : initial-scale="1,maximum-scale=1,minimum-scale=1">
     <title>Portifolio</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
@@ -25,17 +25,17 @@
             class="titulo-destaque">com um Front-end de qualidade!
             </strong></h1>
             <p class="apresentacao__conteudo__texto">Olá! Sou Brendo Garcia da Silva e Odeio Front-end.<br></br>
-          Adora Java e outras linguguem back-end, conheço um pouco de banco de dados e seus modelos pricipalmente o Mysql. Sempre tento aprende coisa novas a todo momento como blockchain e suas tecnologias.</p>
+          Adoro Java e outras linguguem back-end, conheço um pouco de banco de dados e seus modelos pricipalmente o Mysql. Sempre tento aprende coisa novas a todo momento como blockchain e suas tecnologias.</p>
             <div class="apresentacao__botoes">
                 <h2 class="apresentacao__botoes__subtitulo">Acesse minhas Redes:</h2>
-                <a class="apresentacao__botao_link" href="https://linkedin.com/in/brendo-garcia-da-silva-a642091a2"> <img class="icongit" src="imgs/linkedin.png" alt="icon-linkdin">Linkedin</a>
-                <a class="apresentacao__botao_link" href="https://github.com/BrendoGarcia"> <img class="icongit" src="imgs/github.png" alt="icon-github">GitHub</a>
+                <a class="apresentacao__botao_link" href="www.linkedin.com/in/brendo-garcia-da-silva-a642091a2"> <img class="icongit" src="/imgs/linkedin.png" alt="icon-linkdin">Linkedin</a>
+                <a class="apresentacao__botao_link" href="https://github.com/BrendoGarcia"> <img class="icongit" src="/imgs/github (1).png" alt="icon-github">GitHub</a>
             </div>
         </section>
         <img class="minhafoto" src="imgs/images.jpg" alt="minhafoto">
     </main>
     <footer class="rodape">
-        <p>Desenvolvido por Brendo Produções</p>
+        <p class="teste">Desenvolvido por Brendo Produções</p>
     </footer>
 </body>
 
