--- a/form.html
+++ b/form.html
@@ -4,11 +4,10 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" : initial-scale="1,maximum-scale=1,minimum-scale=1">
   <title>Portifolio</title>
   <link rel="stylesheet" href="style.css">
   <script src="script.js"></script>
-  
 </head>
 
 
@@ -90,5 +89,8 @@
     }
     
   </style>
-
+  <br>
+  <footer class="rodape">
+      <p class="teste">Desenvolvido por Brendo Produções</p>
+  </footer>
 </body>
