--- a/aboutme.html
+++ b/aboutme.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport : initial-scale=1,maximum-scale=1,minimum-scale=1">
   <title>Sobre Mim</title>
   <link rel="stylesheet" href="style.css">
   <script src="script.js"></script>
@@ -52,9 +52,9 @@
 
 
   </main>
-
+<br>
   <footer class="rodape">
-    <p>Desenvolvido Brendo Produções</p>
+    <p>Desenvolvido por Brendo Produções</p>
   </footer>
 </body>
 
