--- a/Ecomerce.html
+++ b/Ecomerce.html
@@ -116,6 +116,12 @@
         <p class="precoProdutps">R$ 48,58</p>
         <button class="botaoadicionar">Adicionar ao Carrinho</button>
     </div>
+    <div class="produtos">
+      <img src="" alt="" height="300" width="300">
+      <H2 class="nomeProdutos"></H2>
+      <p class="precoProdutps"></p>
+      <button class="botaoadicionar">Adicionar ao Carrinho</button>
+    </div>
 </div>
   
   <footer class="rodape">
