--- a/Ecomerce.html
+++ b/Ecomerce.html
@@ -40,7 +40,7 @@
 
   <div class="busca" >
     <input type="text" class="campoBusca" placeholder="Buscar produtos...">
-    <img src="/imgs/transferir-removebg-preview.png" width="40" height="40"/>
+    <img src="imgs/transferir-removebg-preview.png" width="40" height="40"/>
   </div>
 <style>
   
@@ -63,7 +63,7 @@
   
 <div class="credprodutos">
     <div class="produtos">
-        <img class="imgstamanha" src="/imgs/xbox.png" alt="xbox" height="300" width="300"> 
+        <img class="imgstamanha" src="imgs/xbox.png" alt="xbox" height="300" width="300"> 
         <h2 class="nomeProdutos">Console Xbox Series X</h2>
         <p class="precoProdutps">R$ 3.799,00</p>
         <button class="botaoadicionar">Adicionar ao Carrinho</button>
